--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <!-- Icons -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
+    <!-- Swiper -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
 
@@ -147,65 +153,132 @@
       <div class="divider-1"></div>
       <!-- TESTIMONIALS -->
       <section class="section" id="testimonials">
-        <div class="container grid">
+        <div class="container">
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
-          <div class="testimonials">
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Dolor, quibusdam totam dolorem voluptate corporis doloremque
-                  suscipit labore debitis eveniet aliquid sunt impedit nisi
-                  laudantium est eos fugiat rem quas excepturi?
-                </p>
-                <cite>
-                  <img src="" alt="" />
-                  Laisa Fernandes
-                </cite>
-              </blockquote>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Dolor, quibusdam totam dolorem voluptate corporis doloremque
+                    suscipit labore debitis eveniet aliquid sunt impedit nisi
+                    laudantium est eos fugiat rem quas excepturi?
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/68.jpg"
+                      alt="Foto de Laisa Fernandes"
+                    />
+                    Laisa Fernandes
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Dolor, quibusdam totam dolorem voluptate corporis doloremque
+                    suscipit labore debitis eveniet aliquid sunt impedit nisi
+                    laudantium est eos fugiat rem quas excepturi?
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/79.jpg"
+                      alt="Foto de Mayara Polani"
+                    />
+                    Mayara Polani
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Dolor, quibusdam totam dolorem voluptate corporis doloremque
+                    suscipit labore debitis eveniet aliquid sunt impedit nisi
+                    laudantium est eos fugiat rem quas excepturi?
+                  </p>
+                  <cite>
+                    <img src="assets/fotos/3.jpg" alt="Foto de Daniela Silva" />
+                    Daniela Silva
+                  </cite>
+                </blockquote>
+              </div>
             </div>
 
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Dolor, quibusdam totam dolorem voluptate corporis doloremque
-                  suscipit labore debitis eveniet aliquid sunt impedit nisi
-                  laudantium est eos fugiat rem quas excepturi?
-                </p>
-                <cite>
-                  <img src="" alt="" />
-                  Mayara Polani
-                </cite>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Dolor, quibusdam totam dolorem voluptate corporis doloremque
-                  suscipit labore debitis eveniet aliquid sunt impedit nisi
-                  laudantium est eos fugiat rem quas excepturi?
-                </p>
-                <cite>
-                  <img src="" alt="" />
-                  Daniela Silva
-                </cite>
-              </blockquote>
-            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <!-- CONTACT -->
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente!</h2>
+            <p>
+              Entre em contato com a Beautysalon,queremos tirar suas dúvidas,
+              ouvir suas críticas e sugestões.
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Olá! Gostaria de agendar um horário"
+              class="button"
+              target="_blank"
+              ><i class="icon-whatsapp"></i> Entrar em contato</a
+            >
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"></i> 11 99845-6754</li>
+              <li><i class="icon-map-pin"></i> R. Amauri , 346</li>
+              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-1"></div>
     </main>
 
+    <footer class="section">
+      <span class="icon-arrow-up"></span>
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
+          <p>©2021 Beautysalon.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href="https://instagram.com" target="_blank"
+            ><i class="icon-instagram"></i></a
+          ><a href="https://facebook.com" target="_blank"
+            ><i class="icon-facebook"></i></a
+          ><a href="https://youtube.com" target="_blank"
+            ><i class="icon-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+    <!-- swiper -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- scrollreveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- main.js -->
     <script src="main.js"></script>
   </body>
 </html>
