--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OriginSix</title>
 
     <!-- Icons -->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
 
     <!-- Swiper -->
     <link
@@ -253,7 +253,6 @@
     </main>
 
     <footer class="section">
-      <span class="icon-arrow-up"></span>
       <div class="container grid">
         <div class="brand">
           <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
@@ -272,6 +271,9 @@
         </div>
       </div>
     </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
