--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
-    <!-- Icons -->
+    <!-- Icones -->
     <link rel="stylesheet" href="assets/style.css" />
 
     <!-- Swiper -->
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -51,17 +51,17 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60"
-              alt="Mulher sorrindo penteando outra Mulher"
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="Mulher sorrindo penteando outra mulher"
             />
           </div>
           <div class="text">
             <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
               Um salão exclusivo em São Paulo, especializado em tratamentos
-              naturais
+              naturais.
             </p>
-            <a class="button" href="">Agende um horário</a>
+            <a class="button" href="#">Agendar um horário</a>
           </div>
         </div>
       </section>
@@ -73,33 +73,31 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60"
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
               alt="3 mulheres sorrindo"
-            />/
+            />
           </div>
           <div class="text">
             <h2 class="title">Sobre nós</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Suspendisse sagittis arcu quis nisi luctus, id accumsan felis
-              tristique. Proin quis bibendum diam. Sed consequat nisl laoreet
-              eros ultricies pellentesque. Nullam in est porta, pellentesque
-              massa vitae, vehicula risus.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
+              beatae dicta ducimus praesentium architecto harum dolorum
+              distinctio illo earum assumenda itaque. Omnis, quam repellat.
             </p>
             <br />
             <p>
-              In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut
-              pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec
-              luctus, nunc finibus elementum suscipit, tortor augue vulputate
-              sapien, vitae feugiat enim augue sed.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+              illum ratione impedit quae eum quis adipisci asperiores, est
+              doloribus distinctio excepturi minima eius dolore! Perferendis
+              laborum illo aspernatur repellendus ipsum.
             </p>
             <br />
             <p>
-              Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis
-              rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu
-              tincidunt tincidunt. Curabitur fringilla, risus at feugiat
-              feugiat, nisl nulla tincidunt tellus, elementum elementum lorem
-              nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+              exercitationem, illum sapiente quasi hic iusto odio maiores esse
+              quaerat quis necessitatibus at odit, dolores dicta, officia ab
+              quos. Provident, quae.
             </p>
           </div>
         </div>
@@ -112,7 +110,7 @@
         <div class="container grid">
           <header>
             <h2 class="title">Serviços</h2>
-            <p>
+            <p class="subtitle">
               Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
               conquistou clientes de inúmeros países com seus tratamentos
               exclusivos e totalmente naturais
@@ -123,27 +121,27 @@
               <i class="icon-woman-hair"></i>
               <h3 class="title">Terapia capilar</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Molestias earum illum cum repellat perferendis rerum alias
-                obcaecati nostrum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
             <div class="card">
               <i class="icon-trim"></i>
               <h3 class="title">Cortes</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Molestias earum illum cum repellat perferendis rerum alias
-                obcaecati nostrum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
             <div class="card">
               <i class="icon-cosmetic"></i>
               <h3 class="title">Tratamentos</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Molestias earum illum cum repellat perferendis rerum alias
-                obcaecati nostrum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
           </div>
@@ -151,6 +149,7 @@
       </section>
 
       <div class="divider-1"></div>
+
       <!-- TESTIMONIALS -->
       <section class="section" id="testimonials">
         <div class="container">
@@ -163,17 +162,34 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Dolor, quibusdam totam dolorem voluptate corporis doloremque
-                    suscipit labore debitis eveniet aliquid sunt impedit nisi
-                    laudantium est eos fugiat rem quas excepturi?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/10.jpg"
+                      alt="Foto de Wanessa Souza"
+                    />
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
                       src="assets/fotos/68.jpg"
-                      alt="Foto de Laisa Fernandes"
+                      alt="Foto de Franciele Venega"
                     />
-                    Laisa Fernandes
+                    Franciele Venega
                   </cite>
                 </blockquote>
               </div>
@@ -182,33 +198,16 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Dolor, quibusdam totam dolorem voluptate corporis doloremque
-                    suscipit labore debitis eveniet aliquid sunt impedit nisi
-                    laudantium est eos fugiat rem quas excepturi?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
                       src="assets/fotos/79.jpg"
-                      alt="Foto de Mayara Polani"
+                      alt="Fotos de Valeska Fabris"
                     />
-                    Mayara Polani
-                  </cite>
-                </blockquote>
-              </div>
-
-              <div class="testimonial swiper-slide">
-                <blockquote>
-                  <p>
-                    <span>&ldquo;</span>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Dolor, quibusdam totam dolorem voluptate corporis doloremque
-                    suscipit labore debitis eveniet aliquid sunt impedit nisi
-                    laudantium est eos fugiat rem quas excepturi?
-                  </p>
-                  <cite>
-                    <img src="assets/fotos/3.jpg" alt="Foto de Daniela Silva" />
-                    Daniela Silva
+                    Valeska Fabris
                   </cite>
                 </blockquote>
               </div>
@@ -228,11 +227,11 @@
           <div class="text">
             <h2 class="title">Entre em contato com a gente!</h2>
             <p>
-              Entre em contato com a Beautysalon,queremos tirar suas dúvidas,
+              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
               ouvir suas críticas e sugestões.
             </p>
             <a
-              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Olá! Gostaria de agendar um horário"
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário"
               class="button"
               target="_blank"
               ><i class="icon-whatsapp"></i> Entrar em contato</a
@@ -242,7 +241,7 @@
           <div class="links">
             <ul class="grid">
               <li><i class="icon-phone"></i> 11 99845-6754</li>
-              <li><i class="icon-map-pin"></i> R. Amauri , 346</li>
+              <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
               <li><i class="icon-mail"></i> contato@beautysalon.com</li>
             </ul>
           </div>
@@ -260,12 +259,14 @@
           <p>Todos os direitos reservados.</p>
         </div>
 
-        <div class="social">
-          <a href="https://instagram.com" target="_blank"
-            ><i class="icon-instagram"></i></a
-          ><a href="https://facebook.com" target="_blank"
-            ><i class="icon-facebook"></i></a
-          ><a href="https://youtube.com" target="_blank"
+        <div class="social grid">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i
+          ></a>
+          <a href="https://youtube.com" target="_blank"
             ><i class="icon-youtube"></i
           ></a>
         </div>
